<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- 패키지 설정 파일의 format은 세번째 버전이다. -->
<package format="3"> 
  <name>cpp_study</name>
  <version>0.0.0</version>
  <description>TODO: For study C++ Code</description>
  <maintainer email="kimsanmaro@gmail.com">siwon</maintainer>
  <license>TODO: License declaration</license>

<!-- 빌드 툴은 ament_cmake를 사용하도록 buildtool_depend 태그로 명시. -->
  <buildtool_depend>ament_cmake</buildtool_depend>

<!-- 테스트 코드 빌드를 위한 의존성 패키지를 설정하기 위해 린트(lint) 패키지를 명시 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

<!-- 소스코드 빌드에 필요한 의존성 패키지를 설정하기 위해 depend 태그로 작성 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>msg_srv_action_interface_example</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
